# bursts

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
