#######################################################################
# BurstS - Lightweight Microservice Application Server
#
cmake_minimum_required(VERSION 3.1)
project(BurstS 
	VERSION 1.0.0.0
	DESCRIPTION "Lightweight Microservice Application Server"
	HOMEPAGE_URL http://www.niccolai.cc
	LANGUAGES CXX
)

add_subdirectory(src)
